--- a/src/views/Login/LoginView.scss
+++ b/src/views/Login/LoginView.scss
@@ -18,7 +18,7 @@
 .login-view-right {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 
     width: 100%;
     height: 100%;
@@ -27,5 +27,11 @@
 
     h3 {
         justify-items: center;
+    }
+
+    .title {
+        display: flex;
+        width: 100%;
+        justify-content: center;
     }
 }
